fix: align dark mode toggle

--- a/src/frontend/src/index.css
+++ b/src/frontend/src/index.css
@@ -40,7 +40,7 @@ body.dark-mode p {
   border: none;
   cursor: pointer;
   padding: 0;
-  margin-top: -10px;
+  margin-top: -3px;
   margin-right: -10px;
   font-size: 1.5rem;
   color: white;
